[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "easy-auth-sdk"
version     = "0.1.1"
description = "Simple auth decorators for Flask, FastAPI, and Django — powered by easy-auth.dev"
readme      = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.28",
    "cryptography>=41",      # Fernet — used by _encryption.py
]

[project.optional-dependencies]
flask   = ["flask>=2.3"]
fastapi = ["fastapi>=0.100", "python-multipart>=0.0.6"]
django  = ["django>=4.2"]
all     = ["flask>=2.3", "fastapi>=0.100", "python-multipart>=0.0.6", "django>=4.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["easyauth*"]